--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -1,65 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/mood_event_item"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="6dp"-->
+<!--        android:minHeight="50dp"-->
+<!--        card_view:cardUseCompatPadding="true"-->
+<!--        card_view:cardElevation="4dp"-->
+<!--        card_view:cardCornerRadius="3dp">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:weightSum="2"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_margin="2dp"-->
+<!--                android:orientation="vertical">-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_image"-->
+<!--                    android:layout_width="40dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="#00000000" />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/event_mood"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:text="Mood"-->
+<!--                    android:textColor="#404040"-->
+<!--                    android:textStyle="bold" />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/event_date"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:text="Date"-->
+<!--                    android:textColor="#404040"-->
+<!--                    android:textStyle="bold" />-->
+
+<!--            </LinearLayout>-->
+
+<!--            <Button-->
+<!--                android:focusable="false"-->
+<!--                android:id="@+id/delete_item"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:backgroundTint="@color/colorAccent"-->
+<!--                android:text="Delete" />-->
+<!--        </LinearLayout>-->
+<!--    </androidx.cardview.widget.CardView>-->
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/mood_event_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:minHeight="50dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="4dp"
-        card_view:cardCornerRadius="3dp">
+        android:orientation="vertical"
+        android:background="#fff"
+
+        android:layout_margin="10dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            >
 
             <LinearLayout
-                android:layout_width="0dp"
+
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="2dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/icon_image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:background="#00000000" />
+                    android:layout_width="45px"
+                    android:layout_height="45px"
+                    android:src="@mipmap/ic_launcher"
+                    android:scaleType="centerCrop"
+                    />
+
                 <TextView
                     android:id="@+id/event_mood"
+                    android:layout_marginLeft="16dp"
+                    android:layout_weight="1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Mood"
-                    android:textColor="#404040"
-                    android:textStyle="bold" />
+                    android:layout_height="wrap_content"
+                    android:text="Fox News ."
+                    android:textSize="14dp"
+                    android:layout_gravity="center"
+                    />
+
                 <TextView
                     android:id="@+id/event_date"
+                    android:layout_weight="0.6"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Date"
-                    android:textColor="#404040"
-                    android:textStyle="bold" />
+                    android:layout_height="wrap_content"
+                    android:text="2 day ago"
+                    android:textSize="14dp"
+                    android:layout_gravity="center"
+                    />
 
+                <TextView
+                    android:id="@+id/more"
+                    android:visibility="invisible"
+                    android:layout_width="15dp"
+                    android:layout_height="22dp"
+                    android:layout_gravity="center"
+                    />
             </LinearLayout>
 
-            <Button
-                android:focusable="false"
-                android:id="@+id/delete_item"
-                android:layout_width="0dp"
+
+
+
+
+            <LinearLayout
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/colorAccent"
-                android:text="Delete" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginRight="5dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/news"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Trump’s Plan for AmericanMade iPhonew Wold Be Disastrous. Trump’s Plan for AmericanMade iPhonew Wold Be Disastrous"
+                        android:lines="3"
+                        android:textSize="17dp"
+                        android:lineSpacingExtra="3dp"
+                        android:maxLines="3"
+                        />
+
+                    <TextView
+                        android:id="@+id/newssub"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Why even a President Trump couldn’t make Apple manufacture iPhone in the state."
+                        android:layout_marginTop="13dp"
+                        android:textSize="13dp"
+                        android:lineSpacingExtra="3dp"
+                        />
+
+
+                    <Button
+                        android:focusable="false"
+                        android:id="@+id/delete_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/colorAccent"
+                        android:text="Delete" />
+
+
+
+
+
+
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="2.2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+
+                        android:id="@+id/me_photo"
+                        android:visibility="gone"
+                        android:layout_width="200px"
+                        android:layout_height="200px"
+                        android:src="@mipmap/ic_launcher"
+                        android:scaleType="fitXY"
+                        />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+
+
+
+
+    </com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
