--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -6,62 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mood_event_item"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="6dp"-->
-<!--        android:minHeight="50dp"-->
-<!--        card_view:cardUseCompatPadding="true"-->
-<!--        card_view:cardElevation="4dp"-->
-<!--        card_view:cardCornerRadius="3dp">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:weightSum="2"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_margin="2dp"-->
-<!--                android:orientation="vertical">-->
-<!--                <ImageView-->
-<!--                    android:id="@+id/icon_image"-->
-<!--                    android:layout_width="40dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="#00000000" />-->
-<!--                <TextView-->
-<!--                    android:id="@+id/event_mood"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="Mood"-->
-<!--                    android:textColor="#404040"-->
-<!--                    android:textStyle="bold" />-->
-<!--                <TextView-->
-<!--                    android:id="@+id/event_date"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="Date"-->
-<!--                    android:textColor="#404040"-->
-<!--                    android:textStyle="bold" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <Button-->
-<!--                android:focusable="false"-->
-<!--                android:id="@+id/delete_item"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:backgroundTint="@color/colorAccent"-->
-<!--                android:text="Delete" />-->
-<!--        </LinearLayout>-->
-<!--    </androidx.cardview.widget.CardView>-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mood_event_item"
         android:layout_width="match_parent"
@@ -146,6 +90,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Trump’s Plan for AmericanMade iPhonew Wold Be Disastrous. Trump’s Plan for AmericanMade iPhonew Wold Be Disastrous"
+                        android:textStyle="bold"
                         android:lines="3"
                         android:textSize="17dp"
                         android:lineSpacingExtra="3dp"
@@ -204,9 +149,5 @@
 
             </LinearLayout>
         </LinearLayout>
-
-
-
-
     </com.google.android.material.card.MaterialCardView>
 </RelativeLayout>
