--- a/src/app/src/main/res/layout/fragment_mood_event.xml
+++ b/src/app/src/main/res/layout/fragment_mood_event.xml
@@ -14,65 +14,203 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.mood.AddMoodEventActivity">
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
-        <RelativeLayout
-            android:id="@+id/fragment_layout"
+        android:id="@+id/fragment_layout"
+        android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+
+            android:id="@+id/mood_event_view_tb"
+            android:layout_height="@dimen/abc_action_bar_default_height_material"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            tools:context=".view.fragment.MoodEventFragment">
-
+            android:minHeight="@dimen/abc_action_bar_default_height_material"
+            android:background="?attr/colorPrimary"
+            app:navigationIcon="?attr/homeAsUpIndicator">
             <TextView
-                android:id="@+id/frag_mood"
-                android:layout_width="86dp"
-                android:layout_height="49dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="false"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="163dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="162dp"
-                android:autoSizeTextType="uniform"
-                android:text="Mood"
-                android:textAlignment="center"
-                android:textSize="30dp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/emoji_view"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_below="@+id/frag_mood"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="false"
-                android:layout_marginStart="156dp"
-                android:layout_marginTop="9dp"
-                android:layout_marginEnd="154dp"
-                android:layout_marginBottom="398dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/angry" />
-
-            <Button
-                android:id="@+id/edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="307dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="667dp"
-                android:background="@android:color/black"
-                android:text="Edit" />
-        </RelativeLayout>
-    </ScrollView>
+                android:text="@string/mood_event"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:textSize="15dp"
+                android:layout_gravity="center"
+                android:id="@+id/toolbar_title" />
+
+        </androidx.appcompat.widget.Toolbar>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            android:clickable="true"
+            android:focusable="true"
+            android:fillViewport="true"
+            android:orientation="horizontal"
+            tools:context=".view.fragment.MoodEventFragment">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="44dp"
+                    android:layout_marginTop="27dp"
+                    android:text="@string/username"
+                    android:textStyle="bold|italic" />
+
+                <ImageView
+                    android:id="@+id/emoji_view"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="44dp"
+                    android:layout_marginTop="27dp"
+                    android:scaleType="fitXY" />
+
+                <TextView
+                    android:id="@+id/frag_mood"
+                    android:layout_width="88dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="10dp"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="60dp"
+                    android:autoSizeTextType="uniform"
+                    android:textAlignment="center"
+                    android:textSize="10sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <Button
+                    android:id="@+id/edit"
+                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@drawable/button"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/edit" />
+                <Button
+                    android:id="@+id/done_edit"
+                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@drawable/button"
+                    android:backgroundTint="@color/color_happy"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/done" />
+
+                <Button
+                    android:id="@+id/cancel_edit"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/button"
+                    android:backgroundTint="@color/colorWhite"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/cancel" />
+
+                <Button
+                    android:id="@+id/delete"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/button"
+                    android:backgroundTint="@color/colorAccent"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/delete" />
+
+                <EditText
+                    android:id="@+id/reason_me"
+                    android:layout_width="239dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/delete"
+                    android:focusable="false"
+                    android:layout_alignStart="@+id/delete"
+                    android:layout_centerHorizontal="true"
+                    android:hint="@string/reason"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="0dp" />
+
+                <Spinner
+                    android:id="@+id/me_frag_spinner"
+                    android:layout_width="242dp"
+                    android:clickable="false"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/reason_me"
+                    android:layout_alignStart="@+id/reason_me"
+                    android:layout_marginStart="-3dp"
+                    android:layout_marginTop="0dp" />
+                <ImageView
+                    android:id="@+id/me_frag_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:clickable="false"
+                    android:layout_below="@+id/me_frag_spinner"
+                    android:layout_alignStart="@+id/me_frag_spinner"
+                    android:paddingLeft="0dp"
+                    android:paddingRight="0dp"
+                    android:scaleType="fitXY"
+                    android:scaleY="0.9" />
+
+                <!--                <Spinner-->
+<!--                    android:id="@+id/spinner"-->
+<!--                    android:layout_width="240dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_alignParentBottom="true"-->
+<!--                    android:layout_marginEnd="7dp"-->
+<!--                    android:layout_marginBottom="136dp" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/image_mood_event_frag"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="128dp"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_alignParentBottom="true"-->
+<!--                    android:layout_marginEnd="-2dp"-->
+<!--                    android:layout_marginBottom="-1dp"-->
+<!--                    android:scaleType="fitXY"-->
+<!--                    app:srcCompat="@drawable/naruto" />-->
+
+            </RelativeLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
