--- a/src/app/src/main/res/layout/fragment_mood_event.xml
+++ b/src/app/src/main/res/layout/fragment_mood_event.xml
@@ -38,15 +38,19 @@
                 android:id="@+id/toolbar_title" />
 
         </androidx.appcompat.widget.Toolbar>
+
         <LinearLayout
+
+            android:id="@+id/edit_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
             android:clickable="true"
-            android:focusable="true"
             android:fillViewport="true"
+            android:focusable="true"
             android:orientation="horizontal"
             tools:context=".view.fragment.MoodEventFragment">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,15 +69,16 @@
                     android:id="@+id/emoji_view"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginStart="44dp"
+                    android:layout_marginStart="25dp"
                     android:layout_marginTop="27dp"
                     android:scaleType="fitXY" />
 
-                <TextView
-                    android:id="@+id/frag_mood"
-                    android:layout_width="88dp"
+                <Spinner
+                    android:id="@+id/me_mood_frag_spinner"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="10dp"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -83,52 +88,54 @@
                     android:id="@+id/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="60dp"
+                    android:layout_marginBottom="10dp"
                     android:autoSizeTextType="uniform"
                     android:textAlignment="center"
                     android:textSize="10sp"
                     android:textStyle="normal" />
             </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <Button
                     android:id="@+id/edit"
                     android:layout_width="wrap_content"
-                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginTop="14dp"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/button"
                     android:backgroundTint="@color/colorPrimaryDark"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="@string/edit" />
+                    android:text="@string/edit"
+                    android:visibility="gone" />
+
                 <Button
                     android:id="@+id/done_edit"
                     android:layout_width="wrap_content"
-                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginTop="14dp"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/button"
                     android:backgroundTint="@color/color_happy"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="@string/done" />
+                    android:text="@string/done"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/cancel_edit"
-                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimaryDark"
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="14dp"
@@ -137,11 +144,12 @@
                     android:backgroundTint="@color/colorWhite"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="@string/cancel" />
+                    android:text="@string/cancel"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/delete"
-                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
@@ -150,66 +158,96 @@
                     android:backgroundTint="@color/colorAccent"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="@string/delete" />
+                    android:text="@string/delete"
+                    android:visibility="gone" />
 
                 <EditText
                     android:id="@+id/reason_me"
                     android:layout_width="239dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/delete"
-                    android:enabled="false"
                     android:layout_alignStart="@+id/delete"
                     android:layout_centerHorizontal="true"
-                    android:hint="@string/reason"
                     android:layout_marginStart="17dp"
                     android:layout_marginTop="0dp"
-                    android:maxLength="20"/>
+                    android:enabled="false"
+                    android:hint="@string/reason"
+                    android:maxLength="20" />
 
-                <Spinner
-                    android:id="@+id/me_frag_spinner"
-                    android:layout_width="242dp"
-                    android:clickable="false"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/reason_me"
-                    android:layout_alignStart="@+id/reason_me"
-                    android:layout_marginStart="-3dp"
-                    android:layout_marginTop="0dp" />
                 <ImageView
                     android:id="@+id/me_frag_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:clickable="false"
                     android:layout_below="@+id/me_frag_spinner"
                     android:layout_alignStart="@+id/me_frag_spinner"
+                    android:adjustViewBounds="true"
+                    android:clickable="false"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
                     android:scaleType="fitXY"
                     android:scaleY="0.9" />
 
-                <!--                <Spinner-->
-<!--                    android:id="@+id/spinner"-->
-<!--                    android:layout_width="240dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_alignParentEnd="true"-->
-<!--                    android:layout_alignParentBottom="true"-->
-<!--                    android:layout_marginEnd="7dp"-->
-<!--                    android:layout_marginBottom="136dp" />-->
+                <LinearLayout
+                    android:id="@+id/photo_button_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/me_frag_image"
+                    android:layout_alignStart="@+id/me_frag_image"
+                    android:orientation="horizontal">
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/image_mood_event_frag"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="128dp"-->
-<!--                    android:layout_alignParentEnd="true"-->
-<!--                    android:layout_alignParentBottom="true"-->
-<!--                    android:layout_marginEnd="-2dp"-->
-<!--                    android:layout_marginBottom="-1dp"-->
-<!--                    android:scaleType="fitXY"-->
-<!--                    app:srcCompat="@drawable/naruto" />-->
+                    <Button
+                        android:id="@+id/upload_photo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button"
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:text="Upload Pic"
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/remove_photo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/button"
+                        android:backgroundTint="@color/colorAccent"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:text="Remove"
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+                <Spinner
+                    android:id="@+id/me_frag_spinner"
+                    android:layout_width="242dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/reason_me"
+                    android:layout_alignStart="@+id/reason_me"
+                    android:layout_marginStart="-3dp"
+                    android:layout_marginTop="0dp"
+                    android:clickable="false" />
 
             </RelativeLayout>
 
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                 />
+        </RelativeLayout>
+
     </LinearLayout>
 
 
